--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,9 @@
-<h1>Landing Page!</h1>
+<% include partials/header %>
 
-<p>Welcome to the yelp camping page!</p>
+<div class="container">
+  <h1>Landing Page!</h1>
+  <p>Welcome to the yelp camping page!</p>
+  <a href="/campgrounds">View all campgrounds</a>
+</div>
 
-<a href="/campgrounds">View all campgrounds</a>
+<% include partials/footer %>
