--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,11 +18,14 @@
   </div>
   <div class="row">
     <% campgrounds.forEach(function(campground) { %>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6" style="text-align: center">
         <img class="img-thumbnail" src="<%= campground.image %>">
         <div class="caption">
           <h4><%= campground.name %></h4>
         </div>
+        <p>
+          <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More info</a>
+        </p>
       </div>
     <% }); %>
   </div>
