--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
   <div class="row">
@@ -19,11 +19,11 @@
             <button class="btn btn-lg btn-primary btn-block">Submit!</button>
           </div>
         </form>
-        <a href="/campgrounds">Cancel</a>
+        <a href="/campgrounds">Go Back</a>
       </div>
     </div>
   </div>
 </div>
 
 
-<% include partials/footer %>
+<% include ../partials/footer %>
