--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,20 +5,21 @@
   <head>
     <title>YelpCamp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   </head>
   <body>
     
   <div class="container">
   <nav class="navbar navbar-expand-lg navbar-right navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Yelp Camp</a>
+    <a class="navbar-brand" href="/campgrounds">Yelp Camp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">logout</a></li>
+        <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+        <li class="nav-item"><a class="nav-link" href="/register">Sign Up</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
       </ul>
     </div>
   </nav>
