--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -21,11 +21,11 @@
                 <p><em>Submitted by: <%= campground.author.username %></em></p>
                 
                 <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
-                  <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
-                  <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                    <button class="btn btn-danger">Delete</button>
-                  </form>
-                <% } %>
+                <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
+                <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                  <button class="btn btn-danger">Delete</button>
+                </form>
+              <% } %>
               </figcaption>
             </figure>
           </div>
@@ -46,6 +46,14 @@
                 <strong><%= comment.author.username %></strong>
                 <span class="float-right">10 days ago</span>
                 <p><%= comment.text %></p>
+                <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                <a class="btn btn-warning btn-sm" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">
+                  Edit
+                </a>
+                <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                  <button class="btn btn-danger btn-sm">Delete</button>
+                </form>
+                <% } %>
               </div>
             </div>
             <% }); %>
@@ -54,10 +62,6 @@
       </div>
     </div>
   </div>
-  
-  
-  
 </div>
-
 
 <% include ../partials/footer %>
