--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,16 @@
     </div>
   </nav>
 </div>
-    
-    
-    
-    
+
+<div class="container mt-3">
+  <% if(error && error.length > 0){ %>
+  <div class="alert alert-danger">
+    <%= error %>
+  </div>
+  <% } %>
+  <% if(success && success.length > 0){ %>
+  <div class="alert alert-success">
+    <%= success %>
+  </div>
+  <% } %>
+</div>
