--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,31 +1,36 @@
 body {
-  
+  margin: 0;
+}
+
+.standard-form {
+  width: 30%; 
+  margin: 30px auto;
 }
 
 .img-thumbnail {
-    padding: 0;
+  padding: 0;
 }
 
 .show-view img {
-    width: 100%;
+  width: 100%;
 }
 
 .show-view {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .show-view .card-body{
-    padding: 0;
+  padding: 0;
 }
 
 .figure {
-    width: 100%;
+  width: 100%;
 }
 
 .figure-caption {
-    padding: 15px;
+  padding: 15px;
 }
 
 .delete-form {
-    display: inline;
+  display: inline;
 }
