--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,7 +15,7 @@
             <img class="image-fluid mx-auto rounded" src="<%= campground.image %>">
             <figure class="figure">
               <figcaption class="figure-caption">
-                <h4 class="float-right">$9.00/night</h4>
+                <h4 class="float-right">$<%= campground.price %>/night</h4>
                 <h1><a href=""><%= campground.name %></h1></a>
                 <p><%= campground.description %></p>
                 <p><em>Submitted by: <%= campground.author.username %></em></p>
