--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,11 +2,21 @@
 
 
 
-<h1>Login page!</h1>
-<form action="/login" method="POST">
-  <input type="text" name="username" placeholder="username">
-  <input type="password" name="password" placeholder="password">
-  <input type="submit" value="Login">
-</form>
+<div class="container">
+  <div class="standard-form">
+    <h3>Please login</h3>
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <input class="form-control" type="text" name="username" placeholder="username">
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="password" name="password" placeholder="password">
+        </div>
+        <div class="form-group">
+          <button class="btn btn-outline-success btn-block" type="submit" value="Login">Login</button>
+        </div>
+    </form>
+  </div>
+</div>
 
 <% include ./partials/footer %>
