--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,19 @@
 <% include ./partials/header %>
 
-<h1>Sign up page!</h1>
 
-<form action="/register" method="POST">
-  <input type="text" name="username" placeholder="username">
-  <input type="password" name="password" placeholder="password">
-  <button>Sign Up</button>
-  
-</form>
+<div class="container">
+  <div class="standard-form">
+    <h3>Sign up here</h3>
+    <form action="/register" method="POST">
+      <div class="form-group">
+        <input class="form-control" type="text" name="username" placeholder="username">
+      </div>
+      <div class="form-group">
+        <input class="form-control" type="password" name="password" placeholder="password">
+      </div>
+      <button class="btn btn-outline-success btn-block" type="submit" value="Login">Sign Up</button>
+    </form>
+  </div>
+</div>
   
 <% include ./partials/footer %>
