--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col">
       <h1 style="text-align: center">Edit <%= campground.name %></h1>
-      <div class="campground-edit-box">
+      <div class="standard-form">
         <form action="/campgrounds/<%= campground._id %>?_method=PUT"  method="POST">
           <div class="form-group">
             <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %>">
